# olmusic

./: DESIGN.md  README.md
inference/english/candle/: Cargo.toml
inference/english/ort/: .gitignore  Cargo.toml
inference/english/ort/src/: main.rs
inference/english/src/: main.rs
midi/: Cargo.toml  go.bat
midi/src/: main.rs
