[package]
name = "english_inference"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "english_inference"
path = "src/main.rs"

[dependencies]
# Candle Machine Learning Framework
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"

# Model downloading and tokenization
hf-hub = "0.4.1"
tokenizers = "0.21.0"

# Error handling utilities
anyhow = "1.0"
serde_json = "1.0.149"

[features]
# Optional: Enable hardware acceleration for faster inference
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
